# tryp2p

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE  README.md  benchmark_tcp.rs  break.txt  build-installer.ps1  build-package.sh  build-results.txt  build-windows.ps1  build.gradle.kts  build_summary.js  build_summary.ps1  build_summary.py  cmd_send_check.txt  cmd_send_now.txt  convert.ps1  diagnostic_log_step3.txt  diff.txt  docker-compose.yml  final_patcher.rs  final_patcher2.rs  final_patcher3.rs  final_patcher4.rs  final_patcher5.rs  final_patcher6.rs  final_patcher7.rs  fix.ps1  fixer.rs  gen.rs  gradle.properties  gradlew.bat  handler.txt  inject_impls.rs  listen.txt  listen_utf8.txt  output.txt  (+25 more)
.github/workflows/: build-all-platforms.yml  ci.yml  release.yml
desktop/p2ptransfer-cli/: Cargo.toml
desktop/p2ptransfer-cli/src/: iroh_transport.rs  main.rs
desktop/p2ptransfer-gui/: index.html  package-lock.json  package.json
desktop/p2ptransfer-gui/src/: App.tsx  TransferContext.tsx  main.tsx  styles.css  types.ts
desktop/p2ptransfer-gui/src-tauri/: Cargo.toml  libtest.rlib  tauri.conf.json
desktop/p2ptransfer-gui/src-tauri/src/: identity.rs  main.rs  protocol.rs  test.rs  test2.rs  test3.rs
desktop/p2ptransfer-gui/src/components/: ChunkFlowBar.tsx  StatusPill.tsx
desktop/p2ptransfer-gui/src/hooks/: usePolling.ts
desktop/p2ptransfer-gui/src/pages/: History.tsx  Home.tsx  Receive.tsx  Send.tsx  Settings.tsx
gradle/: libs.versions.toml
mobile/p2ptransfer-ffi/: Cargo.toml
mobile/p2ptransfer-ffi/src/: lib.rs
mobile/p2ptransfer-flutter/: pubspec.yaml
mobile/p2ptransfer-flutter/lib/: main.dart
mobile/p2ptransfer-flutter/lib/src/: history_page.dart  home_page.dart  receive_page.dart  send_page.dart
mobile/p2ptransfer-flutter/rust/: Cargo.toml
p2p-app/: build.gradle.kts
p2p-app/src/main/java/com/p2p/app/: IconGenerator.java  P2PApplication.java  P2PGui.java
p2p-cli/: build.gradle.kts
p2p-cli/src/main/java/com/p2p/cli/: P2PCli.java
p2p-cli/src/main/resources/: logback.xml
p2p-core/: build.gradle.kts
p2p-core/src/main/java/com/p2p/core/config/: AppConfig.java
p2p-core/src/main/java/com/p2p/core/event/: EventBus.java  EventListener.java  P2PEvent.java
p2p-core/src/main/java/com/p2p/core/exception/: CryptoException.java  ErrorCode.java  NetworkException.java  P2PException.java  ProtocolException.java  SecurityException.java  TransferException.java
p2p-core/src/main/java/com/p2p/core/model/: ChunkInfo.java  FileMetadata.java  PeerId.java  PeerInfo.java  PeerStatus.java  TransferDirection.java  TransferProgress.java  TransferSession.java  TransferState.java
p2p-core/src/main/java/com/p2p/core/service/: CompressionService.java  EncryptionService.java  PeerDiscoveryService.java  TransferService.java
p2p-core/src/main/java/com/p2p/core/util/: FileUtils.java  JsonArrayParser.java  NetworkUtils.java  PlatformUtils.java
p2p-core/src/test/java/com/p2p/core/event/: EventBusTest.java
p2p-core/src/test/java/com/p2p/core/model/: ChunkInfoTest.java  FileMetadataTest.java  (+4 more)
p2p-crypto/: build.gradle.kts
p2p-crypto/src/main/java/com/p2p/crypto/: AesGcmEncryptionService.java  ECDHKeyExchange.java  KeyDerivation.java  KeyRotationManager.java
p2p-crypto/src/test/java/com/p2p/crypto/: CryptoTest.java
p2p-network/: build.gradle.kts
p2p-observability/: build.gradle.kts
p2p-relay/: build.gradle.kts
p2p-relay/src/main/java/com/p2p/relay/: NatTraversalService.java  RegistryClient.java  RegistryServer.java  RelayClient.java  RelayServer.java  StunClient.java
p2p-security/: build.gradle.kts
p2p-transfer/: build.gradle.kts
p2ptransfer-core/: Cargo.toml
p2ptransfer-core/benches/: compression.rs  discovery.rs  tcp_throughput.rs
p2ptransfer-core/src/: lib.rs
p2ptransfer-core/src/compress/: detector.rs  lz4.rs  mod.rs  zstd.rs
p2ptransfer-core/src/crypto/: aead.rs  ecdh.rs  mod.rs
p2ptransfer-core/src/network/: backpressure.rs  bandwidth.rs  mod.rs  nat.rs  relay.rs  stun.rs  tcp.rs  wan_constants.rs
p2ptransfer-core/src/network/wan/: downloader.rs  mod.rs  runner.rs
p2ptransfer-core/src/p2p/: discovery.rs  mod.rs  peer.rs  protocol.rs
p2ptransfer-core/src/storage/: file_iter.rs  mod.rs
p2ptransfer-core/src/transfer/: chunker.rs  engine.rs  hasher.rs  mod.rs  resume.rs
p2ptransfer-core/tests/: metadata_serde_test.rs  resume_integration.rs
patcher_proj/: Cargo.toml
patcher_proj/src/: main.rs
registry-server/: Dockerfile  Dockerfile.relay  docker-compose.yml
scripts/: package-linux.sh  package-macos.sh
wix/: build-wix.bat  p2ptransfer-cli.wxs
(+46 files in other folders)
