[workspace]
resolver = "2"
members = [
    "p2ptransfer-core",
    "desktop/p2ptransfer-cli",
    "desktop/p2ptransfer-gui/src-tauri",
    "mobile/p2ptransfer-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
blake3 = "1"
x25519-dalek = "2"
rand_core = "0.6"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
zstd = { version = "0.13", features = ["experimental"] }
lz4_flex = "0.11"
rayon = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
dirs = "5"
toml = "0.8"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
