[package]
name = "p2ptransfer-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "p2ptransfer CLI - command-line P2P file transfer tool"

[[bin]]
name = "p2p"
path = "src/main.rs"

[dependencies]
p2ptransfer-core = { path = "../../p2ptransfer-core" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hostname = "0.4"
clap.workspace = true
indicatif.workspace = true
dirs.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
local-ip-address = "0.6"
chrono = "0.4.45"
blake3.workspace = true
