[package]
name = "p2ptransfer-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "p2ptransfer FFI bridge - Rust cdylib for Flutter mobile integration"

[lib]
name = "p2ptransfer_ffi"
crate-type = ["cdylib"]

[dependencies]
p2ptransfer-core = { path = "../../p2ptransfer-core" }
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
