[package]
name = "p2ptransfer-gui"
version = "0.1.0"
edition = "2021"
description = "p2ptransfer P2P file transfer - Desktop GUI"

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
p2ptransfer-core = { path = "../../../p2ptransfer-core" }
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "shell-open", "custom-protocol"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
toml = "0.8"
hostname = "0.4"
reqwest = { version = "0.11", features = ["stream"] }
rand = "0.8"
iroh = "1.0.2"
blake3 = "1"
uuid = { version = "1", features = ["v4"] }
futures-lite = "2"
dashmap = "5"
once_cell = "1.18"
bytes = "1"
