[package]
name = "p2ptransfer-bridge"
version = "0.1.0"
edition = "2021"
description = "flutter_rust_bridge Rust side for p2ptransfer mobile"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
p2ptransfer-core = { path = "../../../p2ptransfer-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt", "macros"] }
